--- a/JPA-SSC/nbproject/project.properties
+++ b/JPA-SSC/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=JPA-SSC
+application.vendor=alumno
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +28,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/JPA-SSC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
